aws-basis-network.yml
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  # 全てを入れるVPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: "default"
      Tags:
        - Key: "Name"
          Value: "aws-network-basis-cfn"

  # VPC内でインターネットに公開するサブネット
  PublicSubnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      CidrBlock: "10.0.1.0/24"
      MapPublicIpOnLaunch: false
      Tags:
        - Key: "Name"
          Value: "aws-network-basis-cfn-public"
      VpcId: !Ref VPC

  # VPCで使うインターネットゲートウェイ
  InternetGateway:
    Type: "AWS::EC2::InternetGateway"
    Properties:
      Tags:
      - Key: "Name"
        Value: "aws-network-basis-cfn-gateway"
  AttachGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  # パブリックサブネットがインターネットに繋がるようにする
  PublicRouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: "aws-network-basis-cfn-public-route"
  AddInternetGatewayToPublicRouteTable:
    Type: "AWS::EC2::Route"
    DependsOn: AttachGateway
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
  AttachPublicRouteTableToPublicSubnet:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet

  # Web用のセキュリティグループ
  SecurityGroupForWebServer:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: "aws-network-basis-cfn-web-sg"
      GroupDescription: "aws-network-basis-cfn SecurityGroup for web-server instance in public-subnet"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: "SSH"
          FromPort: 22
          IpProtocol: "tcp"
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: "HTTP"
          FromPort: 80
          IpProtocol: "tcp"
          ToPort: 80
      VpcId: !Ref VPC

  # Web用のEC2
  EC2ForWebServer:
    Type: AWS::EC2::Instance
    Metadata:
      Comment1: Install and bootstrap httpd
      AWS::CloudFormation::Init:
        configSets:
          Install:
            - Install
        Install:
          packages:
            yum:
              httpd: []
          services:
            sysvinit:
              httpd:
                enable: true
                ensureRunning: true
    Properties:
      ImageId: "ami-a77c30c1"
      KeyName: "aws-network-basis"
      InstanceType: "t2.nano"
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          DeleteOnTermination: true
          PrivateIpAddress: 10.0.1.10
          SubnetId: !Ref PublicSubnet
          GroupSet:
            - !Ref SecurityGroupForWebServer
      BlockDeviceMappings:
        -
          DeviceName: /dev/xvda
          Ebs:
            VolumeType: standard
            VolumeSize: 8
            DeleteOnTermination: true
      Tags:
        - Key: Name
          Value: "aws-network-basis-cfn-web-server"
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            yum install -y aws-cfn-bootstrap
            /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource EC2ForWebServer --configsets Install --region ${AWS::Region}
            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource EC2ForWebServer --region ${AWS::Region}
    CreationPolicy:
      ResourceSignal:
        Timeout: PT5M
